--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ quarkus.resteasy-reactive.jackson.serialization.indent-output=true
 quarkus.smallrye-openapi.path=/openapi
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger-ui
+
+quarkus.hibernate-orm.packages=com.example.hexagonal.adapters.out.persistence
